# PersonAccount

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  Makefile  PROJECT_SUMMARY.md  README.md  index.html  mvp-design.md  package-lock.json  package.json  release-please-config.json  tasks.md  vite.config.https.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-please.yml
.trae/documents/: PRD-个人账号管理系统.md  技术架构-个人账号管理系统.md
docs/: README.md  prototype.md  requirements.md
python/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_RELEASE.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  install.bat  install.sh  pyproject.toml  release.py
python/.github/: PULL_REQUEST_TEMPLATE.md
python/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
python/.github/workflows/: ci.yml  publish.yml
python/src/: __init__.py  cli.py  main.py
python/src/core/: crypto.py  vault.py
python/tests/: test_crypto.py  test_vault.py
src/: App.tsx  index.css  types.ts
src/components/: AppShell.tsx  KeyManager.tsx  RequireUnlocked.tsx
src/components/ui/: Button.tsx  Input.tsx  Select.tsx
src/hooks/: useVaultStore.ts
src/i18n/: messages.ts  store.ts  useT.ts
src/pages/: AccountDetail.tsx  AccountEdit.tsx  Accounts.tsx  Settings.tsx  Unlock.tsx
src/utils/: clipboard.ts  crypto.test.ts  crypto.ts  db.ts  encoding.ts
